--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head> 
 <body style="font-family:Arial; text-align:center; margin-top:500px;"> 
 
-	<button onclick="mostra()"style="font-size:100px; padding:30px 60px;">Premi qui</button> 
+	<button onclick="mostra()"
+		style="background-color: green;
+		style="font-size:100px; 
+		padding:30px 60px;"
+		>Premi qui</button> 
 	<div id="msg" style="margin-top:100px; font-size:100px;"></div> 
 
 	<script> 
@@ -21,4 +25,5 @@
 		} 
 	</script> 
 </body>
+
 </html>
