--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<button onclick="mostra()"
 		style="background-color: green;
-		style="font-size:100px; 
+		font-size:100px; 
 		padding:30px 60px;"
 		>Premi qui</button> 
 	<div id="msg" style="margin-top:100px; font-size:100px;"></div> 
@@ -27,3 +27,4 @@
 </body>
 
 </html>
+
