--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 	<script> 
 		function mostra() { 
-			document.getElementById("msg").innerText = "THE GOOD DAIRY!";
-			const audio = new Audio("furore.mp3"); 
+			let audio = new Audio("furore.mp3");
+			document.getElementById("msg").innerText = "THE GOOD DAIRY!"; 
 			audio.play(); 
 		} // registra il service worker 
 			if ("serviceWorker" in navigator) { 
@@ -27,4 +27,5 @@
 </body>
 
 </html>
+
 
