--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="font-family:Arial; text-align:center; margin-top:500px;"> 
 
 	<button onclick="mostra()"
-		style="background-color: green;
+		style="background-color: red;
 		font-size:100px; 
 		padding:30px 60px;"
 		>Premi qui</button> 
@@ -27,5 +27,6 @@
 </body>
 
 </html>
+
 
 
