--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="font-family:Arial; text-align:center; margin-top:500px;"> 
 
 	<button onclick="mostra()"
-		style="background-color: red;
+		style="background-color: pink;
 		font-size:100px; 
 		padding:30px 60px;"
 		>Premi qui</button> 
@@ -33,6 +33,7 @@
 </body>
 
 </html>
+
 
 
 
