--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 </head> 
 <body style="font-family:Arial; text-align:center; margin-top:500px;"> 
 
+	<div id="notifica" 
+		style=" position: fixed; 
+		top: -100px; 
+		left: 50%; 
+		transform: translateX(-50%); 
+		background-color: #28a745; 
+		color: white; 
+		padding: 20px 30px; 
+		border-radius: 10px; 
+		font-size: 24px; 
+		box-shadow: 0 4px 10px rgba(0,0,0,0.3); 
+		transition: top 0.4s ease; 
+		z-index: 9999; 
+		"> 
+	</div>
 	<button onclick="mostra()"
 		style="background-color: pink;
 		font-size:100px; 
@@ -33,6 +48,7 @@
 </body>
 
 </html>
+
 
 
 
