--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		"> 
 	</div>
 	<button onclick="mostra()"
-		style="background-color: pink;
+		style="background-color: red;
 		font-size:100px; 
 		padding:30px 60px;"
 		>Premi qui</button> 
@@ -48,6 +48,7 @@
 </body>
 
 </html>
+
 
 
 
